# prep-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml  railway.toml
.streamlit/: config.toml
evals/: golden.yaml
examples/: sample-prep-chalk.md
playbook/: ai-eng-gaps-drill.md  amc-mock-drill.md  interview-drill-sheet.md  skai-ai-agents-mock-drill.md  system-design-mock-drill.md
src/prep_agent/: cli.py  config.py  models.py  pipeline.py
src/prep_agent/calendar/: auth.py  client.py  extract.py  models.py  store.py  sync.py
src/prep_agent/companies/: aggregate.py
src/prep_agent/evals/: fixtures.py  golden.py  retrieval.py  rubric.py  runner.py
src/prep_agent/obs/: context.py  decorator.py  pricing.py  store.py
src/prep_agent/provider/: anthropic_provider.py  factory.py  gemini_provider.py  types.py
src/prep_agent/rag/: chunker.py  embeddings.py  ingest.py  retrieve.py  store.py
src/prep_agent/research/: extract.py  search.py
src/prep_agent/synthesize/: generate.py
src/prep_agent/ui/: app.py  helpers.py  style.py
src/prep_agent/ui/pages/: 1_Past_preps.py  2_Companies.py  3_Calendar.py  4_Playbook.py  5_Stats.py
