[project]
name = "prep-agent"
version = "0.1.0"
description = "LLM agent that researches companies and generates personalized interview prep"
authors = [{ name = "Ofir Michaely" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "typer>=0.13.0",
    "rich>=13.9.0",
    # RAG layer (Phase 2):
    # - fastembed: local ONNX embeddings (~80MB model). No API key, no cost.
    #   For >1k docs or multi-user, swap for Voyage/OpenAI via the Embedder Protocol.
    # - chromadb: persistent, file-based vector store. Zero infra.
    #   For multi-tenant or >100k vectors, swap for pgvector via the VectorStore wrapper.
    "fastembed>=0.4.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    # Calendar (Phase 6): Google Calendar API + OAuth.
    # Read-only scope; tokens stored locally in ~/.config/prep-agent/.
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    # Gemini provider (free tier available without a credit card).
    "google-genai>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
]

[project.scripts]
prep-agent = "prep_agent.cli:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

# Override any inherited (e.g. Skai CodeArtifact) index URL.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer requires function-call defaults; B008 fights the framework.
"src/prep_agent/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "tavily.*",
    "fastembed.*",
    "chromadb.*",
    "yaml.*",
    "streamlit.*",
    "pandas.*",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "google.auth.*",
    "google.oauth2.*",
    "google.genai.*",
]
ignore_missing_imports = true

# Streamlit page scripts run top-level statements as the UI body —
# strict typing would require # type: ignore on every render call.
[[tool.mypy.overrides]]
module = ["prep_agent.ui.*"]
disallow_untyped_calls = false
warn_return_any = false

# Google's auth libs are typed loosely; their public methods are marked as
# returning Any. We cast at the boundary; relax the strict-call rule here.
[[tool.mypy.overrides]]
module = ["prep_agent.calendar.auth"]
disallow_untyped_calls = false
